@@ -33,7 +33,7 @@ void (*SDL::PauseAudio)(int)=::SDL_PauseAudio;
 
 void (*SDL::UnlockAudio)(void)=::SDL_UnlockAudio;
 void (*SDL::LockAudio)(void)=::SDL_LockAudio;
-void (*SDL::MixAudio)(Uint8 *dst, Uint8 *src, Uint32 len,int)=::SDL_MixAudio;
+void (*SDL::MixAudio)(Uint8 *dst, const Uint8 *src, Uint32 len,int)=::SDL_MixAudio;
 void (*SDL::CloseAudio)(void)=::SDL_CloseAudio;
 int (*SDL::OpenAudio)(SDL_AudioSpec *desired, SDL_AudioSpec *obtained)=::SDL_OpenAudio;
 void (*SDL::QuitSubSystem)(Uint32)=::SDL_QuitSubSystem;
