@@ -1,3 +1,8 @@
+2001-06-04  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
+	* SDL_mapping.*: modified to work with recent SDL CVS versions
+	* actors.*: added a force_party_inv argument to Actor::activate
+	* keyactions.cc: fixed '1'-'8' inventory shortcuts
+	
 2001-06-04  Jeff Freedman  <jeff@amy.nerble.net>
 
 	* You can drop a shape onto the shape area of the Egg-monster page
